--- a/src/components/button.css
+++ b/src/components/button.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
     --primary: #c41581;
 }
 
@@ -20,7 +20,56 @@
     color: whitesmoke;
     border-radius: 4px;
     border: 2px solid var(--primary);
+} */
+
+
+
+
+:root {
+  --primary: #c41581;
 }
+
+.btn {
+  padding: 8px 20px;
+  border-radius: 2px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
+
+.btn--primary {
+  background-color: var(--primary);
+  color: #242424;
+  border: 1px solid var(--primary);
+}
+
+.btn--outline {
+  background-color: transparent;
+  color: #fff;
+  padding: 8px 20px;
+  border: 1px solid var(--primary);
+  transition: all 0.3s ease-out;
+}
+
+.btn--medium {
+  padding: 8px 20px;
+  font-size: 18px;
+}
+
+.btn--large {
+  padding: 12px 26px;
+  font-size: 20px;
+}
+
+.btn--large:hover,
+.btn--medium:hover {
+  transition: all 0.3s ease-out;
+  background: #fff;
+  color: #242424;
+  transition: 250ms;
+}
+
+
 /* The style below is the original version */
 /* button {
     background: #f1356d;
