signup backend still not working 500 error

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -139,10 +139,10 @@
     color: #1888ff;
     transition: 250ms;
   }
-
+/* 
   button {
     display: none;
-  }
+  } */
 }
   /*
   @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
